--- a/argo-cd/overlays/production/ingress.yaml
+++ b/argo-cd/overlays/production/ingress.yaml
@@ -18,5 +18,4 @@ spec:
            name: argocd-server
            port:
              number: 80
-    host: argo-cd.localdev.me
-
+    host: argo-cd.172.18.255.201.nip.io
