--- a/argo-events/overlays/production/event-sources.yaml
+++ b/argo-events/overlays/production/event-sources.yaml
@@ -11,13 +11,13 @@ spec:
       targetPort: 12000
   github:
     argo-combined-app:
-      owner: pervrosen
+      owner: 
       repository: argo-combined-app
       webhook:
         endpoint: /argo-combined-app
         port: "12000"
         method: POST
-        url: http://webhook.172.18.255.200.nip.io
+        url: http://webhook.172.18.255.201.nip.io
       events:
         - "*"
       apiToken:
@@ -48,4 +48,4 @@ spec:
            name: github-eventsource-svc
            port:
              number: 12000
-    host: webhook.172.18.255.200.nip.io
+    host: webhook.172.18.255.201.nip.io
