--- a/argo-workflows/overlays/production/ingress.yaml
+++ b/argo-workflows/overlays/production/ingress.yaml
@@ -18,5 +18,5 @@ spec:
            name: argo-server
            port:
              number: 2746
-    host: argo-workflows.172.20.0.3.nip.io.nip.io
+    host: argo-workflows.172.20.0.3.nip.io
 
