--- a/test.yaml
+++ b/test.yaml
@@ -1,4 +1,4 @@
-apiVersion: networking.k8s.io/v1
+apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
   name: argocd-server
@@ -18,5 +18,5 @@ spec:
            name: argocd-server
            port:
              number: 80
-    host: argo-cd.172.20.255.200.nip.io
+    host: argo-cd.172.18.255.200.nip.io
 
